--- a/exercicios/secao04_JS_conceitos_basicos_I/ex01.html
+++ b/exercicios/secao04_JS_conceitos_basicos_I/ex01.html
@@ -25,7 +25,17 @@
     <p>
       E retorne uma string com o seguinte formato:
       O(a) cliente Maria das Graças Xuxa Meneguel mora em São Paulo, SP.
+      <br><br>
+
+      Minha resolução:
     </p>
+    <pre>
+      <code>
+        function get_address_string(client) {
+          return `O(a) cliente ${client.nome} mora em ${client.cidade}, ${client.uf}.`
+        }
+      </code>
+    </pre>
   </div>
 
   <script>
